[MODIFIED] auth, profile and middleware to standarize the responses. Plus, profile route documented in swagger with whatsapp and mail link route
